<resources>
    <string name="app_name">Bitcoin Price Index Widget</string>
    <string-array name="pref_interval_entries">
        <!-- item>No preference</item  -->
        <item>None</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>8 minutes</item>
        <item>13 minutes</item>
        <item>21 minutes</item>
    </string-array>
    <string-array name="pref_interval_values">
        <!-- item>ANY</item -->
        <item>-1</item>
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>300000</item>
        <item>480000</item>
        <item>780000</item>
        <item>1260000</item>
    </string-array>
    <string-array name="pref_interval_entries_chinese">
        <!-- item>No preference</item  -->
        <item>關</item>
        <item>1 分鐘</item>
        <item>2 分鐘</item>
        <item>3 分鐘</item>
        <item>5 分鐘</item>
        <item>8 分鐘</item>
        <item>13 分鐘</item>
        <item>21 分鐘</item>
    </string-array>
    <string-array name="pref_interval_values_chinese">
        <!-- item>ANY</item -->
        <item>-1</item>
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>300000</item>
        <item>480000</item>
        <item>780000</item>
        <item>1260000</item>
    </string-array>
    <string-array name="pref_interval_entries_chinese_simplified">
        <!-- item>No preference</item  -->
        <item>关</item>
        <item>1 分钟</item>
        <item>2 分钟</item>
        <item>3 分钟</item>
        <item>5 分钟</item>
        <item>8 分钟</item>
        <item>13 分钟</item>
        <item>21 分钟</item>
    </string-array>
    <string-array name="pref_interval_values_chinese_simplified">
        <!-- item>ANY</item -->
        <item>-1</item>
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>300000</item>
        <item>480000</item>
        <item>780000</item>
        <item>1260000</item>
    </string-array>
    <array name="pref_data_source_imageValues">
        <item>@drawable/coindesk_icon</item>
        <item>@drawable/coinbase_icon</item>
        <item>@drawable/bitstamp_icon</item>
        <item>@drawable/btce_icon</item>
        <item>@drawable/bitfinex_icon</item>
        <item>@drawable/kraken_icon</item>
        <item>@drawable/btcchina_icon</item>
        <item>@drawable/okcoin_icon</item>
        <item>@drawable/anxbtc_icon</item>
        <item>@drawable/itbit_icon</item>
        <item>@drawable/lakebtc_icon</item>
    </array>
    <string-array name="pref_data_source_entries">
        <!-- item>ANY</item -->
        <item>Coindesk</item>
        <item>Coinbase</item>
        <item>Bitstamp</item>
        <item>BTC-E</item>
        <item>Bitfinex</item>
        <item>Kraken</item>
        <item>BTC China</item>
        <item>OKCoin</item>
        <item>ANXBTC</item>
        <item>itBit</item>
        <item>LakeBTC</item>
    </string-array>
    <string-array name="pref_data_source_values">
        <!-- item>ANY</item -->
        <item>Coindesk</item>
        <item>Coinbase</item>
        <item>Bitstamp</item>
        <item>BTC-E</item>
        <item>Bitfinex</item>
        <item>Kraken</item>
        <item>BTC China</item>
        <item>OKCoin</item>
        <item>ANXBTC</item>
        <item>itBit</item>
        <item>LakeBTC</item>
    </string-array>
    <string-array name="pref_data_source_entries_chinese">
        <!-- item>ANY</item -->
        <item>Coindesk</item>
        <item>Coinbase</item>
        <item>Bitstamp</item>
        <item>BTC-E</item>
        <item>Bitfinex</item>
        <item>Kraken</item>
        <item>BTC China</item>
        <item>OKCoin</item>
        <item>ANXBTC</item>
        <item>itBit</item>
        <item>LakeBTC</item>
    </string-array>
    <string-array name="pref_data_source_values_chinese">
        <!-- item>ANY</item -->
        <item>Coindesk</item>
        <item>Coinbase</item>
        <item>Bitstamp</item>
        <item>BTC-E</item>
        <item>Bitfinex</item>
        <item>Kraken</item>
        <item>BTC China</item>
        <item>OKCoin</item>
        <item>ANXBTC</item>
        <item>itBit</item>
        <item>LakeBTC</item>
    </string-array>
    <string-array name="pref_data_source_entries_chinese_simplified">
        <!-- item>ANY</item -->
        <item>Coindesk</item>
        <item>Coinbase</item>
        <item>Bitstamp</item>
        <item>BTC-E</item>
        <item>Bitfinex</item>
        <item>Kraken</item>
        <item>BTC China</item>
        <item>OKCoin</item>
        <item>ANXBTC</item>
        <item>itBit</item>
        <item>LakeBTC</item>
    </string-array>
    <string-array name="pref_data_source_values_chinese_simplified">
        <!-- item>ANY</item -->
        <item>Coindesk</item>
        <item>Coinbase</item>
        <item>Bitstamp</item>
        <item>BTC-E</item>
        <item>Bitfinex</item>
        <item>Kraken</item>
        <item>BTC China</item>
        <item>OKCoin</item>
        <item>ANXBTC</item>
        <item>itBit</item>
        <item>LakeBTC</item>
    </string-array>
    <array name="pref_currency_imageValues">
        <item>@drawable/usd</item>
        <item>@drawable/cad</item>
        <item>@drawable/gbp</item>
        <item>@drawable/eur</item>
        <item>@drawable/chf</item>
        <item>@drawable/aud</item>
        <item>@drawable/cny</item>
        <item>@drawable/hkd</item>
        <item>@drawable/twd</item>
        <item>@drawable/inr</item>
    </array>
    <string-array name="pref_currency_entries">
        <!-- item>ANY</item -->
        <item>USD</item>
        <item>CAD</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>CHF</item>
        <item>AUD</item>
        <item>CNY</item>
        <item>HKD</item>
        <item>TWD</item>
        <item>INR</item>
    </string-array>
    <string-array name="pref_currency_values">
        <!-- item>ANY</item -->
        <item>USD</item>
        <item>CAD</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>CHF</item>
        <item>AUD</item>
        <item>CNY</item>
        <item>HKD</item>
        <item>TWD</item>
        <item>INR</item>
    </string-array>
    <string-array name="pref_currency_entries_chinese">
        <!-- item>ANY</item -->
        <item>美元</item>
        <item>加幣</item>
        <item>英鎊</item>
        <item>歐元</item>
        <item>瑞士法郎</item>
        <item>澳元</item>
        <item>人民幣</item>
        <item>港元</item>
        <item>新台幣</item>
        <item>印度盧比</item>
    </string-array>
    <string-array name="pref_currency_values_chinese">
        <!-- item>ANY</item -->
        <item>美元</item>
        <item>加幣</item>
        <item>英鎊</item>
        <item>歐元</item>
        <item>瑞郎</item>
        <item>澳元</item>
        <item>人民幣</item>
        <item>港元</item>
        <item>新台幣</item>
        <item>盧比</item>
    </string-array>
    <string-array name="pref_currency_entries_chinese_simplified">
        <!-- item>ANY</item -->
        <item>美元</item>
        <item>加币</item>
        <item>英镑</item>
        <item>欧元</item>
        <item>瑞士法郎</item>
        <item>澳元</item>
        <item>人民币</item>
        <item>港元</item>
        <item>新台币</item>
        <item>印度卢比</item>
    </string-array>
    <string-array name="pref_currency_values_chinese_simplified">
        <!-- item>ANY</item -->
        <item>美元</item>
        <item>加币</item>
        <item>英镑</item>
        <item>欧元</item>
        <item>瑞郎</item>
        <item>澳元</item>
        <item>人民币</item>
        <item>港元</item>
        <item>新台币</item>
        <item>卢比</item>
    </string-array>
    <array name="pref_theme_imageValues">
        <item>@drawable/float_color</item>
        <item>@drawable/navy_color</item>
        <item>@drawable/clementine_color</item>
        <item>@drawable/glassy_color</item>
    </array>
    <string-array name="pref_theme_entries">
        <!-- item>ANY</item -->
        <item>Float</item>
        <item>Navy</item>
        <item>Clementine</item>
        <item>Glassy</item>
    </string-array>
    <string-array name="pref_theme_values">
        <!-- item>ANY</item -->
        <item>Float</item>
        <item>Navy</item>
        <item>Clementine</item>
        <item>Glassy</item>
    </string-array>
    <string-array name="pref_theme_entries_chinese">
        <!-- item>ANY</item -->
        <item>漂浮</item>
        <item>深藍</item>
        <item>金橘</item>
        <item>磨砂玻璃</item>
    </string-array>
    <string-array name="pref_theme_values_chinese">
        <!-- item>ANY</item -->
        <item>漂浮</item>
        <item>深藍</item>
        <item>金橘</item>
        <item>磨砂玻璃</item>
    </string-array>
    <string-array name="pref_theme_entries_chinese_simplified">
        <!-- item>ANY</item -->
        <item>漂浮</item>
        <item>深蓝</item>
        <item>金橘</item>
        <item>磨砂玻璃</item>
    </string-array>
    <string-array name="pref_theme_values_chinese_simplified">
        <!-- item>ANY</item -->
        <item>漂浮</item>
        <item>深蓝</item>
        <item>金橘</item>
        <item>磨砂玻璃</item>
    </string-array>
    <string-array name="pref_language_entries">
        <!-- item>ANY</item -->
        <item>English</item>
        <item>中文(繁體)</item>
        <item>中文(简体)</item>
    </string-array>
    <string-array name="pref_language_values">
        <!-- item>ANY</item -->
        <item>English</item>
        <item>中文(繁體)</item>
        <item>中文(简体)</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_price_alert_dialog_title">Setup Price Alert</string>
    <string name="alert_type">Alert Type: </string>
    <string name="data_source">Data source: </string>
    <string name="price_alert_above">Above: </string>
    <string name="price_alert_below">Below: </string>
</resources>
