<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="10dip" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:padding="5dip" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/alert_type" />

		<Spinner
			android:id="@+id/spinner_1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:padding="5dip" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/data_source" />

		<Spinner
			android:id="@+id/spinner_2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:padding="5dip" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/price_alert_above" />

		<Spinner
			android:id="@+id/spinner_3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:padding="5dip" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/price_alert_below" />

		<Spinner
			android:id="@+id/spinner_4"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/ln_delete"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="5dip"
		android:visibility="gone" >

		<Button
			android:id="@+id/btn_delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/delete_item" />

		<Button
			android:id="@+id/btn_edit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edit_item" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/ln_add"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="5dip"
		android:visibility="gone" >

		<Button
			android:id="@+id/btn_add"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/add_item" />
	</LinearLayout>

</LinearLayout>